Camvbios solo en python

--- a/00. Python/01_tipos_datos.ipynb
+++ b/00. Python/01_tipos_datos.ipynb
@@ -351,56 +351,130 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "ef17d85b",
+   "cell_type": "markdown",
+   "id": "94ece235",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "# Operadores: Aritmeticos(+, -, *, /)\n",
-    "# logicos (and, or, not), de comparacion (==, !=, >, <)\n",
-    "suma = 5 + 3\n",
-    "print(\"Este es el resultado de la suma \", suma)\n",
-    "\n",
-    "resta = 5 - 7\n",
-    "print(\"Este es el resultado de la resta \", resta)\n",
-    "\n",
-    "multiplicacion = 5 * 3\n",
-    "print(\"Este es el resultado de la multiplicacion \", multiplicacion)\n",
-    "\n",
-    "division = 5 / 3\n",
-    "print(\"Este es el resultado de la division \", division)"
+    "# ___"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "5d843cce",
+   "metadata": {},
+   "source": [
+    "#### - Dato OPERADORES ARITMETICOS (+, -, /, *) 🤖\n",
+    "##### Los conjuntos de datos aritmeticos son aquellos signos matematicos usados en operaciones, lo cuales son (+, -, *, /)."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
+   "id": "ef17d85b",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Este es el resultado de la suma:  8\n",
+      "Este es el resultado de la resta:  -2\n",
+      "Este es el resultado de la multiplicacion:  15\n",
+      "Este es el resultado de la division:  1.6666666666666667\n"
+     ]
+    }
+   ],
+   "source": [
+    "suma = 5 + 3\n",
+    "print(\"Este es el resultado de la suma: \", suma)\n",
+    "\n",
+    "resta = 5 - 7\n",
+    "print(\"Este es el resultado de la resta: \", resta)\n",
+    "\n",
+    "multiplicacion = 5 * 3\n",
+    "print(\"Este es el resultado de la multiplicacion: \", multiplicacion)\n",
+    "\n",
+    "division = 5 / 3\n",
+    "print(\"Este es el resultado de la division: \", division)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ed6e3226",
+   "metadata": {},
+   "source": [
+    "# ___"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "3db09e98",
+   "metadata": {},
+   "source": [
+    "#### - Dato OPERADORES LOGICOS 🤖\n",
+    "##### Son aquellos que son usados para realizar comparaciones de distintos resultados entre vaiedad de formas de datos"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
    "id": "7f0dd310",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Este es el resultado del operador AND:  -2\n",
+      "Este es el resultado del operador OR:  8\n",
+      "Este es el resultado del operador NOT:  False\n",
+      "Este es el resultado del operador de comparacion igual:  False\n",
+      "Este es el resultado del operador de comparacion diferente:  True\n",
+      "Este es el resultado del operador de comparacion mayor:  True\n",
+      "Este es el resultado del operador de comparacion menor:  False\n"
+     ]
+    }
+   ],
    "source": [
     "## Logicos\n",
     "Y = suma and resta\n",
-    "print(\"Este es el resultado del operador AND \", Y)\n",
+    "print(\"Este es el resultado del operador AND: \", Y)\n",
     "\n",
     "o = suma or resta\n",
-    "print(\"Este es el resultado del operador OR \", o)\n",
+    "print(\"Este es el resultado del operador OR: \", o)\n",
     "\n",
     "NO = not resta\n",
-    "print(\"Este es el resultado del operador NOT \", NO)\n",
+    "print(\"Este es el resultado del operador NOT: \", NO)\n",
     "\n",
     "## Comparacion\n",
     "igual = suma == resta\n",
-    "print(\"Este es el resultado del operador de comparacion igual \", igual)\n",
+    "print(\"Este es el resultado del operador de comparacion igual: \", igual)\n",
     "\n",
     "diferente = suma != resta\n",
-    "print(\"Este es el resultado del operador de comparacion diferente \", diferente)\n",
+    "print(\"Este es el resultado del operador de comparacion diferente: \", diferente)\n",
     "\n",
     "mayor = suma > resta\n",
-    "print(\"Este es el resultado del operador de comparacion mayor \", mayor)\n",
+    "print(\"Este es el resultado del operador de comparacion mayor: \", mayor)\n",
     "\n",
     "menor = suma < resta\n",
-    "print(\"Este es el resultado del operador de comparacion menor \", menor)"
+    "print(\"Este es el resultado del operador de comparacion menor: \", menor)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "6a62c69d",
+   "metadata": {},
+   "source": [
+    "# ___"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d52bb50a",
+   "metadata": {},
+   "source": [
+    "#### - Dato FUNCIONES 🤖\n",
+    "##### Las funciones son usadas para reciclar codigo, reutilizar codigo y optimizar algun paso que sea repetitivo"
    ]
   },
   {
@@ -408,44 +482,86 @@
    "execution_count": null,
    "id": "a5e979ec",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Saludando a: Sebastian\n",
+      "Hola, Sebastian\n"
+     ]
+    }
+   ],
    "source": [
-    "## Funciones\n",
     "def saludar(nombre):\n",
     "    print(\"Saludando a:\", nombre)\n",
     "    return f\"Hola, {nombre}\"\n",
     "\n",
-    "\n",
-    "### Uso de la funcion Saludar\n",
     "saludo = saludar(input(\"Ingrese su nombre: \"))\n",
-    "print(saludo)\n",
-    "\n",
-    "\n",
-    "def parametros(nombre=\"Mundo\"):\n",
-    "    return f\"Hola, {nombre}\"\n",
-    "\n",
-    "\n",
-    "def retorno(objeto):\n",
-    "    return print(objeto)"
+    "print(saludo)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
+   "id": "a8c2b8fa",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "El resultado de la suma es: 5\n"
+     ]
+    }
+   ],
+   "source": [
+    "def sumando(primer_parametro, segundo_parametro):\n",
+    "    return primer_parametro + segundo_parametro\n",
+    "\n",
+    "solicitud_de_parametros = input(\"Ingrese dos numeros separados por espacio: \").split()\n",
+    "resultado = sumando(int(solicitud_de_parametros[0]), int(solicitud_de_parametros[1]))\n",
+    "print(\"El resultado de la suma es:\", resultado)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "2ec3656e",
+   "metadata": {},
+   "source": [
+    "#### - Dato MANEJO DE ERRORES 🤖\n",
+    "##### Los manejos de errores, son usados para cuando no se cumple el orden de alguna funcion, o no se almacena de manera correcta algun tipo de dato en especial que ya esta parametrizada la manera en la que se debe de almacenar"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
    "id": "7e893d7b",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Ejecucion finalizada 1.0\n"
+     ]
+    }
+   ],
    "source": [
-    "## MAnejo de errores\n",
-    "try:\n",
-    "    resultado = 10 / 0\n",
-    "except ZeroDivisionError:\n",
-    "    resultado = \"Error: Division por cero\"\n",
-    "finally:\n",
-    "    print(\"Ejecucion finalizada\")\n",
     "\n",
     "## Modularidad\n",
     "import math as m  # noqa: E402\n",
+    "\n",
+    "try:\n",
+    "    primer_numero_divisible = input(\"Ingresa un numero para dividir 10: \")\n",
+    "    segundo_numero_divisible = input(\"Ingresa otro numero para dividir 10: \")\n",
+    "    resultado = int(primer_numero_divisible) / int(segundo_numero_divisible)\n",
+    "except ZeroDivisionError:\n",
+    "    resultado = \"Error: Division por cero\"\n",
+    "finally:\n",
+    "    print(\"Ejecucion finalizada\", resultado)\n",
+    "\n",
+    "\n",
     "\n",
     "raiz_cuadrada = m.sqrt(16)\n"
    ]
