--- a/00. Python/02_funciones.ipynb
+++ b/00. Python/02_funciones.ipynb
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "id": "95181102",
    "metadata": {},
    "outputs": [
@@ -40,20 +40,21 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "El resultado de la función es: 50\n"
+      "El resultado de la función es: (4, 4, 4)\n"
      ]
     }
    ],
    "source": [
-    "def nombre_funcion(param1, param2):\n",
+    "def nombre_funcion(param1, param2, param3):\n",
     "    # lógica interna\n",
-    "    resultado = param1 * param2\n",
+    "    resultado = param1 * 2, param2 * 2, param3 * 2\n",
     "    return resultado\n",
     "\n",
     "numero1 = int(input(\"Ingresa el primer número: \"))\n",
     "numero2 = int(input(\"Ingresa el segundo número: \"))\n",
+    "numero3 = int(input(\"Ingresa el tercer número: \"))\n",
     "\n",
-    "nombre = nombre_funcion(numero1, numero2)\n",
+    "nombre = nombre_funcion(numero1, numero2, numero3)\n",
     "print(\"El resultado de la función es:\", nombre)\n"
    ]
   },
@@ -69,7 +70,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "id": "f32c31cc",
    "metadata": {},
    "outputs": [
@@ -77,7 +78,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Resultado: Positivo\n"
+      "Resultado: Cero\n"
      ]
     }
    ],
@@ -106,7 +107,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "id": "136800fc",
    "metadata": {},
    "outputs": [
@@ -114,7 +115,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Análisis: {'valor': 9, 'par': False, 'positivo': True, 'tipo': 'int'}\n"
+      "Análisis: {'valor': 89, 'par': False, 'positivo': True, 'tipo': 'int'}\n"
      ]
     }
    ],
@@ -127,9 +128,15 @@
     "        \"tipo\": type(n).__name__\n",
     "    }\n",
     "\n",
-    "dato = int(input(\"Ingresa un número: \"))\n",
-    "resultado = analizar_numero(dato)\n",
-    "print(\"Análisis:\", resultado)"
+    "while True:\n",
+    "    entrada = input(\"Ingresa un número: \")\n",
+    "    try:\n",
+    "        dato = int(entrada)\n",
+    "        resultado = analizar_numero(dato)\n",
+    "        print(\"✅ Análisis:\", resultado)\n",
+    "        break  # Salimos del bucle si todo fue correcto\n",
+    "    except ValueError:\n",
+    "        print(\"❌ Entrada inválida: escribe solo números enteros sin letras ni símbolos.\")\n"
    ]
   },
   {
