--- a/00. Python/02_funciones.ipynb
+++ b/00. Python/02_funciones.ipynb
@@ -142,9 +142,153 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "d54454d5",
+   "metadata": {},
+   "source": [
+    "___"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "2d8b24b3",
+   "metadata": {},
+   "source": [
+    "#### 🧩 Categorias y ejemplos practicos\n",
+    "##### 1. 📤 Entrada y salida\n",
+    "###### Muestra datos en pantalla print()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "id": "5b590adb",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hola, Arca\n",
+      "Python - es - genial\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"Hola, Arca\")  # Salida: Hola, Arca\n",
+    "print(\"Python\", \"es\", \"genial\", sep=\" - \")  # Salida: Python - es - genial"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "35856bcd",
+   "metadata": {},
+   "source": [
+    "###### Reciben datos de usuario input()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "f70f1365",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Bienvenido, Sebastian\n"
+     ]
+    }
+   ],
+   "source": [
+    "nombre = input(\"¿Cómo te llamas? \")\n",
+    "print(\"Bienvenido,\", nombre)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "1dc47aa7",
+   "metadata": {},
+   "source": [
+    "##### 2. 📤 Funciones numericas\n",
+    "###### Devuelve el valor absoluto abs()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "cb640a31",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "5\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(abs(-5))  # Salida: 5"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "bdacf5f8",
+   "metadata": {},
+   "source": [
+    "###### Redondea el numero"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "844ea303",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3.1\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(round(3.14159, 1))  # Salida: 3.14"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a485d047",
+   "metadata": {},
+   "source": [
+    "###### Potencia: pow(base, exponente)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "77c5e939",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "8\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(pow(2, 3))  # Salida: 8"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c21d289a",
+   "id": "99beed01",
    "metadata": {},
    "outputs": [],
    "source": []
