Realizamos cambios a la carpeta de 00. Python, con archivo de funciones

--- a/00. Python/02_funciones.ipynb
+++ b/00. Python/02_funciones.ipynb
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
    "id": "95181102",
    "metadata": {},
    "outputs": [
@@ -40,7 +40,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "El resultado de la función es: (4, 4, 4)\n"
+      "El resultado de la función es: (6, 6, 8)\n"
      ]
     }
    ],
@@ -70,7 +70,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 2,
    "id": "f32c31cc",
    "metadata": {},
    "outputs": [
@@ -78,7 +78,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Resultado: Cero\n"
+      "Resultado: Positivo\n"
      ]
     }
    ],
@@ -107,7 +107,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 6,
    "id": "136800fc",
    "metadata": {},
    "outputs": [
@@ -117,7 +117,8 @@
      "text": [
       "❌ Entrada inválida: escribe solo números enteros sin letras ni símbolos.\n",
       "❌ Entrada inválida: escribe solo números enteros sin letras ni símbolos.\n",
-      "✅ Análisis: {'valor': 89, 'par': False, 'positivo': True, 'tipo': 'int'}\n"
+      "❌ Entrada inválida: escribe solo números enteros sin letras ni símbolos.\n",
+      "✅ Análisis: {'valor': 87, 'par': False, 'positivo': True, 'tipo': 'int'}\n"
      ]
     }
    ],
@@ -161,7 +162,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 9,
    "id": "5b590adb",
    "metadata": {},
    "outputs": [
@@ -169,14 +170,14 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Hola, Arca\n",
-      "Python - es - genial\n"
+      "hol a - como - estas\n",
+      "None\n"
      ]
     }
    ],
    "source": [
-    "print(\"Hola, Arca\")  # Salida: Hola, Arca\n",
-    "print(\"Python\", \"es\", \"genial\", sep=\" - \")  # Salida: Python - es - genial"
+    "ingreso = print(input(\"Ingresa un texto: \"))  # Salida: Hola, Arca\n",
+    "print(ingreso, sep=\" - \")  # Salida: Python - es - genial"
    ]
   },
   {
@@ -189,7 +190,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 10,
    "id": "f70f1365",
    "metadata": {},
    "outputs": [
@@ -197,13 +198,21 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Bienvenido, Sebastian\n"
+      "Bienvenido, Sebastian Miranda Forigua\n"
      ]
     }
    ],
    "source": [
     "nombre = input(\"¿Cómo te llamas? \")\n",
     "print(\"Bienvenido,\", nombre)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "393c22f1",
+   "metadata": {},
+   "source": [
+    "___"
    ]
   },
   {
@@ -217,7 +226,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 11,
    "id": "cb640a31",
    "metadata": {},
    "outputs": [
@@ -243,7 +252,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 22,
    "id": "844ea303",
    "metadata": {},
    "outputs": [
@@ -251,12 +260,15 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "3.1\n"
+      "86803535.90133725\n"
      ]
     }
    ],
    "source": [
-    "print(round(3.14159, 1))  # Salida: 3.14"
+    "numero1 = float(input(\"Ingresa un número: \"))\n",
+    "numero2 = float(input(\"Ingresa otro número: \"))\n",
+    "multiplicacion = numero1 * numero2\n",
+    "print(round(multiplicacion, 9))  # Redondea a 2 decimales"
    ]
   },
   {
@@ -286,9 +298,350 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "8aa7574d",
+   "metadata": {},
+   "source": [
+    "___"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "11877b89",
+   "metadata": {},
+   "source": [
+    "##### 🔰 Funcion sin parametro"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "id": "ccb340df",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hola, mundo\n"
+     ]
+    }
+   ],
+   "source": [
+    "def saludar():\n",
+    "    print(\"Hola, mundo\")\n",
+    "    \n",
+    "saludar()  # Llamada a la función"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a8320a94",
+   "metadata": {},
+   "source": [
+    "##### 🔰 Funcion con parametros posicionales"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "id": "1f3d4dde",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "La suma es: 181\n"
+     ]
+    }
+   ],
+   "source": [
+    "def sumar(a, b):\n",
+    "    return a + b\n",
+    "\n",
+    "ingreso_num1 = float(input(\"Ingresa el primer número: \"))\n",
+    "ingreso_num2 = float(input(\"Ingresa el segundo número: \"))\n",
+    "resultado = sumar(ingreso_num1, ingreso_num2)\n",
+    "print(\"La suma es:\", round(resultado))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a00b13e0",
+   "metadata": {},
+   "source": [
+    "___"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "16ae901d",
+   "metadata": {},
+   "source": [
+    "##### 🔹 3. Parámetros con valores por defecto\n",
+    "###### 📌 Si no se pasa argumento, usa el valor por defecto."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "id": "0c499db2",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hola, Wanda\n",
+      "None\n"
+     ]
+    }
+   ],
+   "source": [
+    "def saludar(nombre=input(\"¿Cómo te llamas? \")):\n",
+    "    print(f\"Hola, {nombre}\")\n",
+    "    \n",
+    "print(saludar())"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "1336ca52",
+   "metadata": {},
+   "source": [
+    "##### 🔹 4. Parámetros con nombre (keyword arguments)\n",
+    "###### 📌 Puedes cambiar el orden si usas nombres explícitos."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "id": "64e019cf",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Arca tiene 30 años\n"
+     ]
+    }
+   ],
+   "source": [
+    "def presentar(nombre, edad):\n",
+    "    print(f\"{nombre} tiene {edad} años\")\n",
+    "\n",
+    "presentar(edad=30, nombre=\"Arca\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e433c59b",
+   "metadata": {},
+   "source": [
+    "___"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "dc1bb346",
+   "metadata": {},
+   "source": [
+    "##### 🔹 5. Parámetros variables: *args\n",
+    "###### 📌 Recibe cualquier cantidad de argumentos como tupla."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "id": "cf4a00e4",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "La suma total es: 89.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "def sumar_todo(*numeros):\n",
+    "    return sum(numeros)\n",
+    "\n",
+    "entrada = input(\"Ingresa los números separados por espacio: \")  # Ejemplo: 2 3 5\n",
+    "numeros = [float(n) for n in entrada.split()]\n",
+    "resultado = sumar_todo(*numeros)\n",
+    "print(\"La suma total es:\", round(resultado, 10))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "82dff046",
+   "metadata": {},
+   "source": [
+    "##### 🔹 6. Parámetros variables con nombre: **kwargs\n",
+    "###### 📌 Recibe argumentos con nombre como diccionario."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "id": "9e171d5e",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "nombre: Arca\n",
+      "lenguaje: Python\n",
+      "nivel: Avanzado\n"
+     ]
+    }
+   ],
+   "source": [
+    "def mostrar_info(**datos):\n",
+    "    for clave, valor in datos.items():\n",
+    "        print(f\"{clave}: {valor}\")\n",
+    "\n",
+    "mostrar_info(nombre=\"Arca\", lenguaje=\"Python\", nivel=\"Avanzado\")\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "5828fbc8",
+   "metadata": {},
+   "source": [
+    "##### 🔹 7. Función que retorna múltiples valores\n",
+    "###### 📌 Muy útil para análisis estructurado."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
+   "id": "8c930ee9",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Valor: -88, Par: True, Positivo: False\n"
+     ]
+    }
+   ],
+   "source": [
+    "def analizar(n):\n",
+    "    return n, n % 2 == 0, n > 0\n",
+    "\n",
+    "entrada = input(\"Ingresa un número: \")\n",
+    "\n",
+    "try:\n",
+    "    numero = int(entrada)\n",
+    "    valor, es_par, es_positivo = analizar(numero)\n",
+    "    print(f\"Valor: {valor}, Par: {es_par}, Positivo: {es_positivo}\")\n",
+    "except ValueError:\n",
+    "    print(\"❌ Entrada inválida: por favor ingresa un número entero.\")\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "8c2a5476",
+   "metadata": {},
+   "source": [
+    "##### 🔹 8. Función anónima: lambda\n",
+    "###### 📌 Ideal para funciones simples y rápidas."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
+   "id": "dadac94c",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "8\n"
+     ]
+    }
+   ],
+   "source": [
+    "doble = lambda x: x * 2\n",
+    "print(doble(4))  # Salida: 8"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "539b0209",
+   "metadata": {},
+   "source": [
+    "##### 🔹 9. Función como argumento\n",
+    "###### 📌 Te permite pasar lógica como parámetro."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 49,
+   "id": "ab7c08e2",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "49\n"
+     ]
+    }
+   ],
+   "source": [
+    "def aplicar(funcion, valor):\n",
+    "    return funcion(valor)\n",
+    "\n",
+    "print(aplicar(lambda x: x**2, 7))  # Salida: 25"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e349758e",
+   "metadata": {},
+   "source": [
+    "##### 🔹 10. Función con validación interna\n",
+    "###### 📌 Siempre valida antes de operar."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 51,
+   "id": "61da350a",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "La suma es: 188.88\n"
+     ]
+    }
+   ],
+   "source": [
+    "def sumar(a, b):\n",
+    "    return a + b\n",
+    "\n",
+    "ingreso_num1 = float(input(\"Ingresa el primer número: \"))\n",
+    "ingreso_num2 = float(input(\"Ingresa el segundo número: \"))\n",
+    "resultado = sumar(ingreso_num1, ingreso_num2)\n",
+    "\n",
+    "print(\"La suma es:\", round(resultado, 2))\n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "99beed01",
+   "id": "f55239cf",
    "metadata": {},
    "outputs": [],
    "source": []
