Nuevo archivo de clases

--- a/00. Python/03_clases.ipynb
+++ b/00. Python/03_clases.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 8,
    "id": "96b8d86f",
    "metadata": {},
    "outputs": [],
@@ -43,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 9,
    "id": "27dc58b7",
    "metadata": {},
    "outputs": [
@@ -51,13 +51,16 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Hola, soy Arca y tengo 30 años.\n"
+      "Hola, soy Natalia y tengo 48 años.\n"
      ]
     }
    ],
    "source": [
-    "p1 = Persona(\"Arca\", 30)\n",
-    "print(p1.saludar())  # Hola, soy Arca y tengo 30 años."
+    "name = input(\"Ingrese el nombre de la persona: \")\n",
+    "date = int(input(\"Ingrese la edad de la persona: \"))\n",
+    "\n",
+    "persona = Persona(name, date)\n",
+    "print(persona.saludar())"
    ]
   },
   {
@@ -88,24 +91,197 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "436745a5",
+   "metadata": {},
+   "source": [
+    "##### 🧸 1. __init__: El nacimiento del objeto\n",
+    "###### Este motodo es como el momento en que nace tu juguete. Tú decides como será: Que nombre tendrá, que color, que tamaño. Cada vez que creas un nuevo juguete (objeto,) __init___ se activa automaticamente"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 29,
    "id": "26b6a38a",
    "metadata": {},
    "outputs": [],
    "source": [
-    "class Producto:\n",
-    "    def __init__(self, nombre, precio):\n",
+    "class Juguete:\n",
+    "    def __init__(self, nombre, color):\n",
     "        self.nombre = nombre\n",
-    "        self.precio = precio\n",
+    "        self.color = color\n",
     "\n",
     "    def __str__(self):\n",
-    "        return f\"{self.nombre} cuesta ${self.precio}\""
+    "        return f\"Tienes el juguete {self.nombre}, y es de color 📚{self.color}\""
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "20e53c4c",
+   "id": "ee3516c9",
+   "metadata": {},
+   "source": [
+    "###### Cuando haces esto:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "id": "f515dd92",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Tienes el juguete Bostlayer, y es de color 📚Green\n"
+     ]
+    }
+   ],
+   "source": [
+    "nombre_juguete = input(\"Ingrese el nombre del juguete: \")\n",
+    "color_juguete = input(\"Ingrese el color del juguete: \")\n",
+    "\n",
+    "mi_juguete = Juguete(nombre_juguete, color_juguete)\n",
+    "print(mi_juguete)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "82039cbc",
+   "metadata": {},
+   "source": [
+    "###### ➡️ Python llama a __init__ y guarda nombre_juguete=\"Robot\" y color_juguete=\"Rojo\" dentro del objeto."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f3c73964",
+   "metadata": {},
+   "source": [
+    "___"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "5b28ef5e",
+   "metadata": {},
+   "source": [
+    "##### 🗣️ 2. __str__: Cómo se presenta al mundo\n",
+    "###### Este método es como si el juguete hablara para presentarse. Cuando tú haces print(mi_juguete), Python pregunta: “¿Cómo quieres que se vea este objeto?” Y __str__ responde con una frase bonita."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "id": "dbb32f35",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class Juguete:\n",
+    "    def __init__(self, nombre, color):\n",
+    "        self.nombre = nombre\n",
+    "        self.color = color\n",
+    "\n",
+    "    def __str__(self):\n",
+    "        return f\"Soy un {self.nombre} de color {self.color}\"\n",
+    "    \n",
+    "juguete = input(\"¿Qué juguete quieres? \")\n",
+    "color_juguete = input(\"¿De qué color? \")\n",
+    "\n",
+    "mi_juguete = Juguete(juguete, color_juguete)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c40eef30",
+   "metadata": {},
+   "source": [
+    "###### ➡️ Si haces print(mi_juguete), verás:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "id": "2d5b6850",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Soy un Carro de color Azul\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(mi_juguete)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "85808272",
+   "metadata": {},
+   "source": [
+    "___"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "5864efa6",
+   "metadata": {},
+   "source": [
+    "##### 🧑‍🔬 3. __repr__: Cómo se ve para los programadores\n",
+    "###### Este método es como si el juguete hablara para presentarse. Cuando tú haces print(mi_juguete), Python pregunta: “¿Cómo quieres que se vea este objeto?” Y __str__ responde con una frase bonita."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
+   "id": "d2dcbffd",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class Juguete:\n",
+    "    def __init__(self, nombre, color):\n",
+    "        self.nombre = nombre\n",
+    "        self.color = color\n",
+    "\n",
+    "    def __repr__(self):\n",
+    "        return f\"Juguete({self.nombre!r}, {self.color!r})\""
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "6c4471ed",
+   "metadata": {},
+   "source": [
+    "###### ➡️ Si escribes solo mi_juguete en una celda de notebook, verás:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 48,
+   "id": "5229ce11",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Juguete('Pelota', 'roja')"
+      ]
+     },
+     "execution_count": 48,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "Juguete(\"Pelota\", \"roja\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "5977bb0c",
    "metadata": {},
    "source": [
     "___"
@@ -122,12 +298,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 19,
    "id": "03604cc7",
    "metadata": {},
    "outputs": [],
    "source": [
-    "class Estudiante(Persona):\n",
+    "class Estudiante(Juguete):\n",
     "    def estudiar(self):\n",
     "        return f\"{self.nombre} está estudiando Python.\""
    ]
