Python y sus clases

--- a/00. Python/03_clases.ipynb
+++ b/00. Python/03_clases.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 1,
    "id": "96b8d86f",
    "metadata": {},
    "outputs": [],
@@ -43,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 3,
    "id": "27dc58b7",
    "metadata": {},
    "outputs": [
@@ -51,7 +51,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Hola, soy Natalia y tengo 48 años.\n"
+      "Hola, soy Santiago y tengo 89 años.\n"
      ]
     }
    ],
@@ -59,8 +59,16 @@
     "name = input(\"Ingrese el nombre de la persona: \")\n",
     "date = int(input(\"Ingrese la edad de la persona: \"))\n",
     "\n",
-    "persona = Persona(name, date)\n",
-    "print(persona.saludar())"
+    "persona_guardada = Persona(name, date)\n",
+    "print(persona_guardada.saludar())"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "8ab523b2",
+   "metadata": {},
+   "source": [
+    "___"
    ]
   },
   {
@@ -101,7 +109,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 5,
    "id": "26b6a38a",
    "metadata": {},
    "outputs": [],
@@ -125,7 +133,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 6,
    "id": "f515dd92",
    "metadata": {},
    "outputs": [
@@ -133,7 +141,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Tienes el juguete Bostlayer, y es de color 📚Green\n"
+      "Tienes el juguete Max Tell, y es de color 📚Azul\n"
      ]
     }
    ],
@@ -172,10 +180,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": null,
    "id": "dbb32f35",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Soy un Roco de color Verde\n"
+     ]
+    }
+   ],
    "source": [
     "class Juguete:\n",
     "    def __init__(self, nombre, color):\n",
@@ -186,9 +202,7 @@
     "        return f\"Soy un {self.nombre} de color {self.color}\"\n",
     "    \n",
     "juguete = input(\"¿Qué juguete quieres? \")\n",
-    "color_juguete = input(\"¿De qué color? \")\n",
-    "\n",
-    "mi_juguete = Juguete(juguete, color_juguete)"
+    "color_juguete = input(\"¿De qué color? \")"
    ]
   },
   {
@@ -201,7 +215,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 9,
    "id": "2d5b6850",
    "metadata": {},
    "outputs": [
@@ -209,11 +223,12 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Soy un Carro de color Azul\n"
+      "Soy un Roco de color Verde\n"
      ]
     }
    ],
    "source": [
+    "mi_juguete = Juguete(juguete, color_juguete)\n",
     "print(mi_juguete)"
    ]
   },
@@ -236,7 +251,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 34,
    "id": "d2dcbffd",
    "metadata": {},
    "outputs": [],
@@ -247,7 +262,7 @@
     "        self.color = color\n",
     "\n",
     "    def __repr__(self):\n",
-    "        return f\"Juguete({self.nombre!r}, {self.color!r})\""
+    "        return f\"Juguete: ({self.nombre!r}), color: ({self.color!r})\""
    ]
   },
   {
@@ -260,23 +275,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 35,
    "id": "5229ce11",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "Juguete('Pelota', 'roja')"
+       "Juguete: ('Maxtell'), color: ('Blue')"
       ]
      },
-     "execution_count": 48,
+     "execution_count": 35,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "Juguete(\"Pelota\", \"roja\")"
+    "Juguete(\"Maxtell\", \"Blue\")"
    ]
   },
   {
@@ -298,14 +313,49 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 36,
    "id": "03604cc7",
    "metadata": {},
    "outputs": [],
    "source": [
-    "class Estudiante(Juguete):\n",
-    "    def estudiar(self):\n",
-    "        return f\"{self.nombre} está estudiando Python.\""
+    "class JugueteSonoro(Juguete):\n",
+    "    def __init__(self, nombre, color, sonido):\n",
+    "        super().__init__(nombre, color)  # ✅ Llama al constructor del padre\n",
+    "        self.sonido = sonido\n",
+    "\n",
+    "    def reproducir_sonido(self):\n",
+    "        return f\"{self.nombre} hace: {self.sonido}\""
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "3ca8c13d",
+   "metadata": {},
+   "source": [
+    "###### Hacemos uso de las propiedades de la clase JugueteSonoro la cual hace instancia de la Clase Juguete"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "id": "eb30fc55",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "El  toro es de color  muuuu y hace  muuuu\n"
+     ]
+    }
+   ],
+   "source": [
+    "tipo_animal = input(\"¿Qué tipo de animal es el juguete? \")\n",
+    "color_animal = input(\"¿Que color tiene el animal? \")\n",
+    "sonido_animal = input(\"¿Qué sonido hace el juguete? \")\n",
+    "\n",
+    "esjuguete = JugueteSonoro(tipo_animal, color_animal, sonido_animal)\n",
+    "print(\"El \", tipo_animal, \"es de color \", color_animal, \"y hace \",  esjuguete.sonido)"
    ]
   },
   {
@@ -321,15 +371,31 @@
    "id": "db1f4b29",
    "metadata": {},
    "source": [
-    "#### 🧰 6. Métodos de clase y estáticos"
+    "#### 🧰 6. Métodos de clase y estáticos\n",
+    "\n",
+    "##### ➡️ ¿Que es un metodo estatic?\n",
+    "###### Un mentodo estatico, es una funcion dentro de una clase que:\n",
+    "###### - No usa self (no accede a atributos del objeto)\n",
+    "###### - No usa cls (no accede a atributos de la clase)\n",
+    "###### - Se define con el decorador @staticmethod\n",
+    "###### - Se puede llamar directamente desde la clase"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 48,
    "id": "5d885c13",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "12\n",
+      "Soy una calculadora\n"
+     ]
+    }
+   ],
    "source": [
     "class Calculadora:\n",
     "    @staticmethod\n",
@@ -338,7 +404,21 @@
     "\n",
     "    @classmethod\n",
     "    def identidad(cls):\n",
-    "        return \"Soy una calculadora\""
+    "        return \"Soy una calculadora\"\n",
+    "    \n",
+    "print(Calculadora.sumar(5, 7))\n",
+    "print(Calculadora.identidad())"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "2404898a",
+   "metadata": {},
+   "source": [
+    "##### ➡️ ¿Cuando usar @staticmethod?\n",
+    "###### - Cuando la funcion no necesita acceder a los atributos del objeto ni de la clase\n",
+    "###### - Para organizar funciones relacionadas dentro de una clase\n",
+    "###### - Para evitar instancias innecesarias"
    ]
   },
   {
