Agregando cmabio de la carpeta python de los archivos variables y tipo de datos

--- a/00. Python/00_variables.ipynb
+++ b/00. Python/00_variables.ipynb
@@ -45,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "id": "629c8de5",
    "metadata": {},
    "outputs": [
@@ -72,7 +72,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "id": "3c4e3791",
    "metadata": {},
    "outputs": [
@@ -99,7 +99,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "id": "60b4ab8a",
    "metadata": {},
    "outputs": [
@@ -107,7 +107,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "El valor almacenado en la variable numero_divisible es: 89\n"
+      "El valor almacenado en la variable numero divisible es: 89\n"
      ]
     }
    ],
@@ -142,13 +142,21 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "El resultado de la suma de los numero mas la division 89  : 2.0\n"
+      "El resultado de la suma de los numeros mas la division 89  es: 2.0\n"
      ]
     }
    ],
    "source": [
-    "print(\"El resultado de la suma de los numero mas la division\", numero_divisible, \" :\", suma/numero_divisible)"
+    "print(\"El resultado de la suma de los numeros mas la division\", numero_divisible, \" es:\", suma/numero_divisible)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "3aed4682",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
